--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/@magenta/music@1.3.1"></script>
-
     <script src="./helpers.js" defer></script>
     <script src="./script.js" defer></script>
     <!-- ハンズフリー関連 -->
@@ -23,7 +22,6 @@
                 <span>ロード</span>
             </button>
         </div>
-
     </div>
 
     <div class="loaded" hidden>
@@ -40,7 +38,7 @@
             <button class="color color-5" id="btn5" data-id="5"><span></span></button>
             <button class="color color-6" id="btn6" data-id="6"><span></span></button>
             <button class="color color-7" id="btn7" data-id="7"><span></span></button>
-            <button class="settings" onclick="settingsBox.hidden = !settingsBox.hidden" id="btnSettings">
+            <button class="settings" style="display: none;" onclick="settingsBox.hidden = !settingsBox.hidden" id="btnSettings">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20">
                     <path fill="none" d="M0 0h20v20H0V0z" />
                     <path
